# AndroidMarkerARDemo

./: README.md  gradle.properties  settings.gradle
androidcalibration/: CMakeLists.txt  build.gradle  proguard-rules.pro
androidcalibration/src/androidTest/java/com/example/lzx1413/androidcalibration/: ExampleInstrumentedTest.java
androidcalibration/src/main/: AndroidManifest.xml
androidcalibration/src/main/cpp/: ARDisplay.cpp  ARDisplay.h  CameraCalibration.cpp  CameraCalibration.hpp  GeometryTypes.cpp  GeometryTypes.hpp  Marker.cpp  MarkerDetector.cpp  MarkerDetector.hpp  native-opencv.cpp
androidcalibration/src/main/java/com/example/lzx1413/androidcalibration/: CalibrationResult.java  CameraCalibrator.java  CameraPreview.java  MainActivity.java  OnCameraFrameRender.java
androidcalibration/src/main/res/layout/: activity_main.xml
androidcalibration/src/main/res/menu/: calibration.xml
androidcalibration/src/main/res/values/: strings.xml
androidcalibration/src/test/java/com/example/lzx1413/androidcalibration/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/huang/opencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MarkerDetector.cpp  MarkerDetector.hpp  native-math.cpp  native-opencv.cpp
app/src/main/java/com/huang/opencvtest/: CameraPreview.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/huang/opencvtest/: ExampleUnitTest.java
distribution/include/caffe2/fb/aloha/: bbox_transform_op.h  box_with_nms_limit_op.h  eigen_utils.h  generate_proposals_op.h  generate_proposals_op_util_boxes.h  generate_proposals_op_util_nms.h  roi_warp_op.h
distribution/include/caffe2/fb/quantized_compression/: quant_decode_op.h  quant_decomp_zstd_op.h
distribution/include/opencv2/core/cuda/: color.hpp  reduce.hpp  type_traits.hpp
distribution/include/opencv2/core/cuda/detail/: color_detail.hpp  reduce.hpp  reduce_key_val.hpp  transform_detail.hpp  type_traits_detail.hpp  vec_distance_detail.hpp
distribution/mathlib/add/include/: add.h
gradle/wrapper/: gradle-wrapper.properties
mathlib/: CMakeLists.txt  build.gradle
mathlib/src/androidTest/java/com/huang/mathlib/: ExampleInstrumentedTest.java
mathlib/src/main/: AndroidManifest.xml
mathlib/src/main/cpp/: CMakeLists.txt  add.cpp
mathlib/src/main/cpp/add/: CMakeLists.txt
mathlib/src/main/res/values/: strings.xml
mathlib/src/test/java/com/huang/mathlib/: ExampleUnitTest.java
openCVLibrary320/src/main/java/org/opencv/android/: CameraBridgeViewBase.java
